--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,14 @@
   padding: 0;
   font-size: 16px;
   font-family: "Roboto", sans-serif;
+  box-sizing: border-box;
+  list-style-type: none;
+}
+
+.App {
+  background-color: #f5f5f5;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
