--- a/src/index.css
+++ b/src/index.css
@@ -13,4 +13,11 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+@media(max-width:650px) {
+  .App {
+    padding: 0 15px;
+  }
 }
